--- a/src/pages/Login/Login.scss
+++ b/src/pages/Login/Login.scss
@@ -35,3 +35,7 @@ form.login-form {
 .ant-drawer-content {
     background-color: #f0f6ff !important;
 }
+
+.login-form {
+    margin-top: 66px;
+  }
