--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -258,3 +258,14 @@ nav ul li a {
 body {
   margin: 0;
 }
+
+.content-wrapper > .row {
+    margin-top: 85px;
+}
+
+.content-wrapper > .row {
+  max-width: 60vw;
+  margin: auto;
+  margin-top: 85px;
+}
+
