--- a/src/pages/Profile/profile.scss
+++ b/src/pages/Profile/profile.scss
@@ -384,9 +384,10 @@ a {
 }
 
 .container > .wrapper > .heading > div.img {
-    background-image: linear-gradient(150deg, rgba(63, 174, 255, .3)15%, rgba(63, 174, 255, .3)70%, rgba(63, 174, 255, .3)94%), url(https://bootdey.com/img/Content/flores-amarillas-wallpaper.jpeg);
+    background-image: url('../../assets/banner.jpg');
     max-height: 350px;
-    background-size: cover;
+    background-position: center;
+    background-size: stretch;
 }
 
 .container {
@@ -488,5 +489,136 @@ span.attachment img.attachment {
     width: auto;
 }
 
+span.ant-upload-wrapper {
+    float: left;
+}
 
-/*end social*/
+.ant-upload-list-item.ant-upload-list-item-done {
+    border: 0 !important;
+}
+
+img.ant-upload-list-item-image {
+    width: 168px;
+    height: 168px;
+}
+
+span.ant-upload-wrapper.css-dev-only-do-not-override-6j9yrn.ant-upload-picture-card-wrapper {
+    width: 168px;
+    height: 168px;
+    margin-left: 0;
+}
+
+.ant-upload-list.ant-upload-list-picture-card {
+    width: 168px;
+    height: 168px;
+}
+
+.ant-upload-list-item-container {
+    width: 168px;
+    height: 168px;
+}
+
+.ant-upload-list-item.ant-upload-list-item-done {
+    width: 168px;
+    height: 168px !important;
+}
+
+.card.social-prof {
+    border: 0;
+}
+
+.comments-input .ant-upload-wrapper {
+    padding-left: 20px;
+}
+
+$image2: './src/assets/coca-cola-4.svg';
+
+@keyframes animate {
+0% {
+   transform: rotateY(0deg);
+}
+10% {
+    transform: rotateY(180deg);
+}
+20% {
+    transform: rotateY(0deg);
+}
+100% {
+    transform: rotateY(0deg);
+}
+}
+
+
+.rotate-profile {
+    perspective: 1000px;
+    width: 168px;
+    height: 168px;
+    float: left;
+  }
+  .prof-card {
+    animation: animate 20s linear infinite;
+    width: 168px;
+    height: 168px;
+  }
+  .card-container, .heading img.ant-upload-list-item-image, .profile-back {
+    width: 168px;
+    height: 168px;
+  }
+  .profile-back {
+    background-image: url(#{$image2});
+  }
+  .prof-card {
+    transition: 0.6s;
+    transform-style: preserve-3d;
+    position: relative;
+  }
+  .heading img.ant-upload-list-item-image, .profile-back {
+    backface-visibility: hidden;
+    position: absolute !important;
+    top: 0;
+    left: 0;
+  }
+  .heading img.ant-upload-list-item-image {
+    z-index: -1;
+    transform: rotateY(0deg);
+  }
+  
+  .profile-back {
+    z-index: 999;
+    transform: rotateY(180deg);
+  }
+
+  .heading .ant-upload.ant-upload-select {
+    width: 168px !important;
+    height: 168px !important;
+    border-radius: 50% !important;
+  }
+
+  :where(.css-dev-only-do-not-override-6j9yrn).ant-upload-wrapper.ant-upload-picture-card-wrapper .ant-upload-list.ant-upload-list-picture-card .ant-upload-list-item::before, :where(.css-dev-only-do-not-override-6j9yrn).ant-upload-wrapper.ant-upload-picture-circle-wrapper .ant-upload-list.ant-upload-list-picture-card .ant-upload-list-item::before, :where(.css-dev-only-do-not-override-6j9yrn).ant-upload-wrapper.ant-upload-picture-card-wrapper .ant-upload-list.ant-upload-list-picture-circle .ant-upload-list-item::before, :where(.css-dev-only-do-not-override-6j9yrn).ant-upload-wrapper.ant-upload-picture-circle-wrapper .ant-upload-list.ant-upload-list-picture-circle .ant-upload-list-item::before {
+    border-radius: 50%;
+  }
+  
+  span.anticon.anticon-delete {
+    height: 50px;
+    width: 50px !important;
+    padding: 5px;
+  }
+
+  span.anticon.anticon-eye {
+    height: 50px;
+    width: 50px !important;
+    padding: 5px;
+}
+
+.anticon svg {
+    width: 30px;
+    height: 30px;
+}
+
+span.ant-upload-list-item-actions {
+    text-align: center;
+    width: 90% !important;
+    margin: auto;
+}
+
+  /*end social*/
