fixes allowing private user messaging chat to function with websockets

--- a/src/components/ProfileActivity/profile-activity.scss
+++ b/src/components/ProfileActivity/profile-activity.scss
@@ -1000,3 +1000,13 @@ ul.list-group.list-group-flush {
 li.list-group-item {
   padding-left: 0;
 }
+
+.comments-input-wrapper .ant-form {
+  height: 120px;
+}
+
+ul.photos-list {
+  margin: auto;
+  max-width: 375px;
+  margin-left: 2em;
+}
