--- a/src/pages/Profile/profile.scss
+++ b/src/pages/Profile/profile.scss
@@ -625,7 +625,7 @@ span.ant-upload-list-item-actions {
     padding: 1.25rem;
 }
 
-img.profile-back {
+.myprofile img.profile-back {
     margin-left: 20px;
 }
 
