--- a/src/layout/Header/header.styles.scss
+++ b/src/layout/Header/header.styles.scss
@@ -77,3 +77,151 @@ span.ant-layout-sider-zero-width-trigger.ant-layout-sider-zero-width-trigger-lef
     left: 25px;
     z-index: 1;
 }
+
+.header-logo {
+    background-image: url('../../assets/bloom.png');
+    background-size: contain;
+}
+
+.header-logo {
+    width: 60px;
+    height: 60px;
+    float: left;
+}
+
+.header-link-wrapper ul {
+    position: absolute;
+    right: 0;
+}
+
+nav.header-link-wrapper {
+    max-height: 66px;
+}
+
+.header-link-wrapper > a {
+    display: inline;
+    float: left;
+}
+
+.search-wrapper {
+    margin-left: 50px;
+    padding: 7px;
+}
+
+.search-wrapper span.ant-input-affix-wrapper {
+    height: 32px;
+}
+
+.header-logo {
+    margin-left: 15px;
+}
+
+i.fa.fa-bell.notification-icon {
+    font-size: x-large;
+}
+
+input.search-input {
+    box-sizing: border-box;
+    display: inline-block;
+    height: 50px;
+    margin-bottom: 4px;
+    margin-left: 0px;
+    margin-right: 0px;
+    margin-top: 0px;
+    padding-bottom: 18px;
+    padding-left: 55.2px;
+    padding-right: 18px;
+    padding-top: 18px;
+    width: 100%;
+    font-family: cera-round-pro, "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-feature-settings: "ss01";
+    font-kerning: auto;
+    font-optical-sizing: auto;
+    font-size: 16px;
+    font-stretch: 100%;
+    font-style: normal;
+    font-variant-alternates: normal;
+    font-variant-caps: normal;
+    font-variant-east-asian: normal;
+    font-variant-ligatures: normal;
+    font-variant-numeric: normal;
+    font-variant-position: normal;
+    font-variation-settings: normal;
+    font-weight: 700;
+    letter-spacing: normal;
+    line-height: 24px;
+    text-align: start;
+    text-indent: 0px;
+    text-shadow: none;
+    text-size-adjust: 100%;
+    text-transform: none;
+    word-spacing: 0px;
+    color: rgb(0, 0, 0);
+    background-attachment: scroll;
+    background-clip: border-box;
+    background-color: rgb(255, 255, 255);
+    background-image: none;
+    background-origin: padding-box;
+    background-position-x: 0%;
+    background-position-y: 0%;
+    background-repeat: repeat;
+    background-size: auto;
+    border-bottom-color: rgba(24, 49, 83, 0.25);
+    border-bottom-style: solid;
+    border-bottom-width:2px;
+    border-image-outset: 0;
+    border-image-repeat: stretch;
+    border-image-slice: 100%;
+    border-image-source: none;
+    border-image-width:1;
+    border-left-color: rgba(24, 49, 83, 0.25);
+    border-left-style: solid;
+    border-left-width: 2px;
+    border-right-color: rgba(24, 49, 83, 0.25);
+    border-right-style: solid;
+    border-right-width: 2px;
+    border-top-color: rgba(24, 49, 83, 0.25);
+    border-top-style: solid;
+    border-top-width: 2px;
+    box-shadow: rgb(240, 241, 243) 0px 4px 0px 0px inset;
+    text-rendering: auto;
+    appearance: auto;
+    border-bottom-left-radius: 32px;
+    border-bottom-right-radius: 32px;
+    border-top-left-radius: 32px;
+    border-top-right-radius: 32px;
+    padding-block-end: 18px;
+    padding-block-start: 18px;
+    padding-inline-end: 18px;
+    padding-inline-start: 55.2px;
+    -webkit-rtl-ordering: logical;
+}
+
+.search-wrapper svg {
+    box-sizing: content-box;
+    display: block;
+    height: 20px;
+    left: 135px;
+    margin-right: 2.5px;
+    overflow-x: visible;
+    overflow-y: visible;
+    position: absolute;
+    top: 22px;
+    width: 20px;
+    font-family: cera-round-pro, "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-feature-settings: "ss01";
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 20px;
+    text-align: start;
+    text-size-adjust: 100%;
+    color: rgb(24, 49, 83);
+    text-rendering: optimizespeed;
+    overflow-clip-margin: content-box;
+    pointer-events: none;
+}
+
+.search-wrapper {
+    width: 350px;
+    opacity: 0.25;
+}
