added video, charity, corporation, search, friends functionalities

--- a/src/components/ProfileAbout/profile-about.scss
+++ b/src/components/ProfileAbout/profile-about.scss
@@ -54,3 +54,18 @@ ul.contact-info {
     list-style-type: none;
     padding-inline-start: 40px;
 }
+
+ul.overview {
+    padding-inline-start: 0px;
+}
+
+.card.social-timeline-card.about {
+    max-width: 600px;
+    width: 600px;
+}
+
+ul.basic-info {
+    list-style-type: none;
+}
+
+
