--- a/src/components/ProfilePhotos/profile-photos.scss
+++ b/src/components/ProfilePhotos/profile-photos.scss
@@ -26,4 +26,7 @@ button.ant-btn.css-dev-only-do-not-override-6j9yrn.ant-btn-default {
     margin-top: 30px;
 }
 
+.profile-photos h1 {
+    margin: 20px;
+}
 
